--- a/WebContent/Browse.jspx
+++ b/WebContent/Browse.jspx
@@ -40,45 +40,55 @@
 							<h3 class="w3-padding-64"></h3>
 						</div>
 						<div class="w3-bar-block">
-							<a href="Start?cuurPage=home" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-							<a href="Start?cuurPage=categories" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Categories</a> 
-							<a href="Start?cuurPage=cart" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cart</a> 
-							<a href="Start?cuurPage=team" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Our Team</a> 
-							<a href="Start?cuurPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Account Management</a> 
-							<a href="Start?cuurPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Membership</a> 
-							<a href="Start?cuurPage=home" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+							<a href="Start?currPage=home" onclick="w3_close()"
+								class="w3-bar-item w3-button w3-hover-white">Home</a> <a
+								href="Start?currPage=categories" onclick="w3_close()"
+								class="w3-bar-item w3-button w3-hover-white">Categories</a> <a
+								href="Start?currPage=cart" onclick="w3_close()"
+								class="w3-bar-item w3-button w3-hover-white">Cart</a> <a
+								href="Start?currPage=team" onclick="w3_close()"
+								class="w3-bar-item w3-button w3-hover-white">Our Team</a> <a
+								href="Start?currPage=login" onclick="w3_close()"
+								class="w3-bar-item w3-button w3-hover-white">Account
+								Management</a> <a href="Start?currPage=login" onclick="w3_close()"
+								class="w3-bar-item w3-button w3-hover-white">Membership</a> <a
+								href="Start?currPage=login" onclick="w3_close()"
+								class="w3-bar-item w3-button w3-hover-white">Contact</a>
 						</div>
 					</nav>
 				</td>
-				<td align="right"> 
-					
-						<table class="w3-light-grey">
-							<tr>
-								<td><input type='text' name='searchField' id='searchField'></input></td>
+				<td align="right">
 
-								<td><input type='submit' name='Search' value='Search'
-									onClick="searchBook('Start'); return false;"></input></td>
-							</tr>
-							<tr>
-								<td colspan="2"><div id="allBooks"
-										onclick="searchBook('Start');return false;">All Books</div>
-									<div id="EECS1" onclick="loadByCategory('Start', 'category1');return false">1st
-										Year EECS Books</div>
-									<div id="EECS2" onclick="loadByCategory('Start', 'category2');return false">2nd
-										Year EECS Books</div>
-									<div id="EECS3" onclick="loadByCategory('Start', 'category3');return false">3rd
-										Year EECS Books</div>
-									<div id="EECS4" onclick="loadByCategory('Start', 'category4');return false">4th
-										Year EECS Books</div>
-								</td>
-							</tr>
-							<tr>
- 
-								<td colspan="2"><p id='resultDisplay'></p>
-									<div id='starting'>${results}</div></td>
-							</tr>
-						</table>
-					
+					<table class="w3-light-grey">
+						<tr>
+							<td><input type='text' name='searchField' id='searchField'></input></td>
+
+							<td><input type='submit' name='Search' value='Search'
+								onClick="searchBook('Start'); return false;"></input></td>
+						</tr>
+						<tr>
+							<td colspan="2"><div id="allBooks"
+									onclick="searchBook('Start');return false;">All Books</div>
+								<div id="EECS1"
+									onclick="loadByCategory('Start', 'category1');return false">1st
+									Year EECS Books</div>
+								<div id="EECS2"
+									onclick="loadByCategory('Start', 'category2');return false">2nd
+									Year EECS Books</div>
+								<div id="EECS3"
+									onclick="loadByCategory('Start', 'category3');return false">3rd
+									Year EECS Books</div>
+								<div id="EECS4"
+									onclick="loadByCategory('Start', 'category4');return false">4th
+									Year EECS Books</div></td>
+						</tr>
+						<tr>
+
+							<td colspan="2"><p id='resultDisplay'></p>
+								<div id='starting'>${results}</div></td>
+						</tr>
+					</table>
+
 				</td>
 			</tr>
 		</table>
