--- a/WebContent/Browse.jspx
+++ b/WebContent/Browse.jspx
@@ -60,7 +60,7 @@
 				<td> <label for="bookID" style="margin-right: 100px"
 							class="w3-medium w3-text-red"><br>
 							<font size="4" color="#e8e0d9"><b>Display Books: </b></font></br></label></td>
-				<td align="right" $${displaybooks}></td>
+				<td align="right"> $${results} </td>
 			</tr>
 		</table>
 	</form>
