--- a/WebContent/Browse.jspx
+++ b/WebContent/Browse.jspx
@@ -20,15 +20,52 @@
 <script type="text/javascript" src="./res/browse.js">
 	;
 </script>
+<style>
+body {
+	margin: 0;
+	font-family: Arial, Helvetica, sans-serif;
+}
 
+.topnav {
+	overflow: hidden;
+	background-color: #333;
+}
+
+.topnav a {
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.topnav a:hover {
+	background-color: #ddd;
+	color: black;
+}
+
+.topnav a.active {
+	background-color: #4CAF50;
+	color: white;
+}
+</style>
 </head>
 <body>
 	Browse
 	<form name='browseForm' action="Start" method="POST"
 		onsubmit="return validate();">
 		<table>
+		
 			<tr>
 				<td width="300px">
+		<div class="topnav" style="margin-left: 340px; margin-right: 100px">
+				<a onclick="return loadByCategory('EECS1')">EECS - First Year</a> 
+				<a onclick="return loadByCategory('EECS2')">EECS - Second Year</a> 
+				<a onclick="return loadByCategory('EECS3')">EECS - Third Year</a> 
+				<a onclick="return loadByCategory('EECS4')">EECS - Fourth Year</a>
+			   </div>
+			   
 					<nav
 						class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
 						style="z-index: 3; width: 300px; font-weight: bold;"
